# foodbrain

./: .env.example  .gitignore  README.md  architecture.md  handoff.md  pyproject.toml  roadmap.md  ux-design.md
bench/: cases.json  quick_try.py  run_benchmark.py
data/: pairings.json
examples/: aliases.sample.json  pairings.sample.json  recipes.sample.json
gpu-service/: .gitignore  icon_server.py  requirements.txt  server.err  setup.ps1
prototype/: fridge-now.html  presentation.html
prototype/mockups/: _base.css  _items.js  _shopping-items.js  combo-1-action-triad.html  combo-2-command-bar.html  combo-3-bottom-dock.html  combo-4-cook-hub.html  cook-confirm-A.html  cook-confirm-B.html  cook-confirm-C.html  cook-confirm-C1.html  cook-confirm-C2.html  cook-confirm-C3-knobs.html  cook-confirm-C3.html  cook-confirm-C4.html  cook-confirm-C5.html  cook-confirm-D.html  cook-confirm-E.html  loading-1-remy-stroll.html  loading-2-tightrope.html  loading-3-wheelbarrow.html  loading-4-ratatouille-pot.html  loading-5-kitchen-runner.html  (+12 more)
scripts/: assign_locations.py  build_flavor_pairings.py  fetch_grocy_recipes.py  fetch_grocy_stock.py  list_locations.py
tests/: test_aliases.py  test_api.py  test_config.py  test_cook.py  test_cookmemory.py  test_grocy_client.py  test_grocy_real_stock_contract.py  test_grocy_recipes.py  test_grocy_writeback.py  test_intake.py  test_llm.py  test_matching.py  test_normalization.py  test_pairing.py  test_recipes.py  test_recipes_api.py  test_recipes_llm.py  test_scoring.py  test_shopping_api.py  test_shopping_llm.py  test_shoppingstore.py
(+23 files in other folders)
