[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foodbrain-assistant"
version = "0.1.0"
description = "Self-hosted kitchen decision helper for Grocy and Home Assistant."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "FoodBrain" }]
dependencies = []

[project.scripts]
foodbrain = "foodbrain_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
